|                Version 0.6                   |
================================================
- Select new talents at character creation and level up;
- Assign quick talents to shortcuts window;
- Map reflexion is now enabled per square;
- Fixed a bug on particles load that was duplicating the last;
- Faster run velocity;
- Render objects when equipped;
- New logo;
- New mouse cursors;
- Particles now can follow NPCs too;
- Blood will follow character's head when needed;
- Fixed a bug that let a dead PC enter the battle mode;
- Applying Character's displacement;

================================================
|               Version 0.5.1                  |
|            Released: 2010-04-13              |
================================================
- UTF-8 support for languages;
- Russian translation added;
- Optimized text render code;
- Lowered delay times for battles;
- Applying skill and attribute modifier to damage and heal points;
- Option to highlight current enemy in action at battles;
- Added stencil buffer size as option;
- Fixed a possible hang up when character dies;
- Fixed XP ammount received when killing (was inverted);
- Fixed a bug when saving files without images;
- Fixed a bug when playing ogg files at big-endian systems;
- When closing an window, activate previous one (not next one);
- Changes to support AmigaOS4;

================================================
|                Version 0.5                   |
|            Released: 2010-03-23              |
================================================
 - Radiobox filter at SkillWindow to only show race/class skills; 
 - Fixed a bug: Keep windows positions after map change;
 - Fixed a bug: Update inventoryWindow after receiveing an item from a dialog;
 - Capacity to walk through low height objects;
 - iaScripts can receive parameters;
 - Fixed a memory leak on bTrees;
 - Fixed a segfault at itemWindow;
 - Better cxSel selection/deselection;
 - Fixed continuous mouse move angle;